--- a/links-manual.html.md.erb
+++ b/links-manual.html.md.erb
@@ -4,7 +4,7 @@ title: Manual Linking
 
 (See [Links](links.html) and [Link properties](links-properties.html) for an introduction.)
 
-<p class="note">Note: This feature is available with bosh-release v?+.</p>
+<p class="note">Note: This feature is available with bosh-release v256+.</p>
 
 For components/endpoints that are not managed by the Director or cannot be linked, operator can explicitly specify full link details in the manifest. This allows release authors to continue exposing a single interface (link) for connecting configuration, instead of exposing adhoc job properties for use when link is not provided.
 
