use spec.name instead of spec.job.name

--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -94,11 +94,11 @@ Templates have access to merged job property values, built by merging default pr
 
 Each template can also access special `spec` object for instance specific configuration:
 
-- `<%%= spec.job.name %>`: Inserts instance name.
+- `<%%= spec.name %>`: Inserts instance name.
 - `<%%= spec.id %>`: Inserts instance ID.
 
-- `<%%= spec.index %>`: Inserts instance index. Use `spec.bootstrap` instead of checking for index being 0.
 - `<%% spec.bootstrap %>`: Allow to evaluate if this instance is a the first instance of its group.
+- `<%%= spec.index %>`: Inserts instance index. Use `spec.bootstrap` instead of checking for index being 0. Additionally there is no guarantee that all instances won't have gaps in their indices.
 
 - `<%%= spec.az %>`: Inserts instance AZ.
 - `<%%= spec.address %>`: Inserts default instance network address (IPv4, IPv6 or DNS record). Available in bosh-release v255.4+.
