add more info about managing releases/stemcells

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -60,6 +60,8 @@ See [Recent Additions and Updates](recent.html).
     * [Deploying](deploying.html)
     * Running one-off tasks
     * Updating deployment to deal with security vulnerabilities
+    * [Managing releases](managing-releases.html)
+    * [Managing stemcells](managing-stemcells.html)
 * [Deploying step-by-step](deploying-step-by-step.html)
 * [CLI commands](sysadmin-commands.html)
 * [Director tasks](director-tasks.html)
