--- a/uploading-stemcells.html.md.erb
+++ b/uploading-stemcells.html.md.erb
@@ -32,12 +32,12 @@ Once the command succeeds you can view all uploaded stemcells in the Director:
 <pre class="terminal">
 $ bosh stemcells
 
-+-----------------------------------------+---------+--------------+
-| Name                                    | Version | CID          |
-+-----------------------------------------+---------+--------------+
-| bosh-aws-xen-hvm-ubuntu-trusty-go_agent | 2751    | ami-cc27a1a4 |
-| bosh-aws-xen-centos-go_agent            | 2710    | ami-a0a674c8 |
-+-----------------------------------------+---------+--------------+
++-----------------------------------------+---------------+---------+--------------+
+| Name                                    | OS            | Version | CID          |
++-----------------------------------------+---------------+---------+--------------+
+| bosh-aws-xen-hvm-ubuntu-trusty-go_agent | ubuntu-trusty | 2751    | ami-cc27a1a4 |
+| bosh-aws-xen-centos-go_agent            | centos-6      | 2710    | ami-a0a674c8 |
++-----------------------------------------+---------------+---------+--------------+
 
 (*) Currently in-use
 
