--- a/pre-start.html.md.erb
+++ b/pre-start.html.md.erb
@@ -2,6 +2,8 @@
 title: Pre-start Script
 ---
 
+(See [Job Lifecycle](job-lifecycle.html) for an explanation of when pre-start scripts run.)
+
 <p class="note">Note: This feature is available with bosh-release v206+ (1.3072.0) and only for releases deployed with 3125+ stemcells.</p>
 
 <p class="note">Note: Releases that make use of pre-start scripts and are deployed on older stemcells or with an older Director may potentially deploy; however, pre-start script will not be called.</p>
@@ -34,7 +36,7 @@ Pre-start script should be idempotent. It may be called multiple times before pr
 
 Unlike a drain script, a pre-start script uses an exit code to indicate its success (exit code 0) or failure (any other exit code).
 
-Pre-start script is called every time before job is started via monit, which means that pre-start script should perform its operations in an idempotent way.
+Pre-start script is called every time before job is started (ctl script is called) by the Director, which means that pre-start script should perform its operations in an idempotent way.
 
 <p class="note">Note: Running `monit start` directly on a VM will not trigger pre-start scripts.</p>
 
