Fix typo for deployment state file extension
Correct the wrong file extention, setting to json.

--- a/using-bosh-init.html.md.erb
+++ b/using-bosh-init.html.md.erb
@@ -79,7 +79,7 @@ Do not delete this file unless you have already deleted your deployment (with `b
 
 If for some reason you've lost your deployment state file, or have not saved the updates from the last run of the deploy command:
 
-1. Create a file a new deployment state in the same directory as your deployment manifest and name it `<manifest>-state.json` (for example `bosh-state.yml` if deployment manifest is `bosh.yml`). Write out following contents:
+1. Create a file a new deployment state in the same directory as your deployment manifest and name it `<manifest>-state.json` (for example `bosh-state.json` if deployment manifest is `bosh.yml`). Write out following contents:
 
 	```json
 	{
