fix broken links

--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -2,7 +2,7 @@
 title: Creating a MicroBOSH Deployment Manifest
 ---
 
-<p class="note">Note: Micro CLI plugin is deprecated, but is still supported. To set up a new Director VM or upgrade your MicroBOSH, please follow <a href="/docs/init.html">Bootstrapping an environment</a> document.</p>
+<p class="note">Note: Micro CLI plugin is deprecated, but is still supported. To set up a new Director VM or upgrade your MicroBOSH, please follow <a href="./init.html">Bootstrapping an environment</a> document.</p>
 
 The deployment manifest for MicroBOSH is similar to the deployment manifest for
 multi-VM BOSH.
