--- a/deploy-microbosh-to-vsphere.html.md.erb
+++ b/deploy-microbosh-to-vsphere.html.md.erb
@@ -4,7 +4,7 @@ title: Deploying MicroBOSH to vSphere
 
 This topic explains how to deploy MicroBOSH to VMware vSphere.
 
-<p class="note">Note: Micro CLI plugin is deprecated, but is still supported. To set up a new Director VM or upgrade your MicroBOSH, please follow <a href="/docs/init-vsphere.html">Initializing on vSphere</a> document.</p>
+<p class="note">Note: Micro CLI plugin is deprecated, but is still supported. To set up a new Director VM or upgrade your MicroBOSH, please follow <a href="./init-vsphere.html">Initializing on vSphere</a> document.</p>
 
 ##<a id="create-manifest"></a>Step 1: Create a Deployment Manifest ##
 
