--- a/setup-vsphere.html.md.erb
+++ b/setup-vsphere.html.md.erb
@@ -16,7 +16,7 @@ Larger applications or larger numbers of applications require more disk space.
 * Larger numbers of active users require more RAM.
 
 vSphere describes hardware in terms of RAM, CPU, virtual disk, and other specs.
-Refer to the [hardware requirements](../deploying/vsphere/hardware_spec.html)
+Refer to the [hardware requirements](http://docs.cloudfoundry.org/deploying/vsphere/hardware_spec.html)
 for Cloud Foundry topic for help deciding what hardware to use.
 
 ##<a id="traffic"></a>Step 2: Restrict Network Traffic ##
