--- a/sysadmin-commands.html.md.erb
+++ b/sysadmin-commands.html.md.erb
@@ -62,7 +62,7 @@ Displays the name, version, and CID of available stemcells.
 $ bosh upload stemcell STEMCELL_PATH [--skip-if-exists]
 $ bosh upload stemcell STEMCELL_URL
 </pre>
-Uploads specified stemcell. See [stemcells section of bosh.io](//bosh.io/stemcells) for all available stemcells.
+Uploads specified stemcell. See [stemcells section of bosh.io](http://bosh.io/stemcells) for all available stemcells.
 
 <pre class="terminal">$ bosh delete stemcell NAME VERSION [--force]</pre>
 Deletes a stemcell and all associated compiled packages. Fails if any deployment references this stemcell.
