--- a/uploading-stemcells.html.md.erb
+++ b/uploading-stemcells.html.md.erb
@@ -8,7 +8,7 @@ As described earlier, each resource pool references a specific stemcell on the D
 
 ## <a id='find'></a> Finding Stemcells
 
-The [stemcells section of bosh.io](//bosh.io/stemcells) lists official stemcells.
+The [stemcells section of bosh.io](http://bosh.io/stemcells) lists official stemcells.
 
 ---
 ## <a id='upload'></a> Uploading to the Director
