--- a/bootstrap.html.md.erb
+++ b/bootstrap.html.md.erb
@@ -6,7 +6,7 @@ MicroBOSH is a single-VM BOSH environment that includes all necessary BOSH compo
 
 Special BOSH CLI command (<code>bosh micro deploy</code>) can be used to create, update or migrate existing MicroBOSH VM. In addition to managing the VM, it is also responsible for managing the persistent disk attached to the MicroBOSH VM. Persistent disk is used by the Director to store information about the deployments it manages.
 
-<p class="note">Note: Micro CLI plugin is deprecated, but is still supported. To set up a new Director VM or upgrade your MicroBOSH, please follow <a href="/docs/init.html">Bootstrapping an environment</a> document.</p>
+<p class="note">Note: Micro CLI plugin is deprecated, but is still supported. To set up a new Director VM or upgrade your MicroBOSH, follow <a href="./init.html">Bootstrapping an environment</a> document.</p>
 
 Cloud Foundry recommends that you update your BOSH environment frequently to stay on the latest version of BOSH.
 
