--- a/init-softlayer.html.md.erb
+++ b/init-softlayer.html.md.erb
@@ -222,10 +222,10 @@ VLANs provide the ability to partition devices and subnets on the network. To or
 
 1. Install the [BOSH Command Line Interface (CLI)](./bosh-cli.html).
 
-1. Use `bosh target 10.0.0.6` to log into your new BOSH Director. The default username and password are `admin` and `admin`.
+1. Use `bosh target DIRECTOR-IP` to log into your new BOSH Director. The default username and password are `admin` and `admin`.
 
     <pre class="terminal">
-    $ bosh target 10.0.0.6
+    $ bosh target 10.112.116.110
 
     Target set to 'bosh'
     Your username: admin
